// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton renders with active theme when passed as prop 1`] = `
<button
  class="base-button base-button--active"
>
  
  
</button>
`;

exports[`BaseButton renders with inactive theme when passed as prop 1`] = `
<button
  class="base-button base-button--inactive"
>
  
  
</button>
`;
